2014-10-24  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 0.9.0 released
        ========================

        Add energy dispersion to CTA module
        Add pointing table support to CTA module
        Add event filtering for binned analysis
        Add +=, -=, *= and /= operators to GSkymap
        Add integration status tracking to GIntegral
        Add GCTAExposure and GCTAMeanPsf classes
        Add ts and tscalc attributes to GModel and use them in models
        Add manipulation methods to GCTAResponseTable
        Add read(), write() and save() methods to GCTAPsf2D and GCTAPsfKing
        Add classname() method to all classes
        Add utc() methods to GTime class
        Add hierachical element access methods to GXml and GXmlNode
        Read/write altitude and azimuth attributes of CTA data
        Refactor CTA response class, add GCTAResponseCube class
        Improve CTA response computation for extended models
        Implement CTA cube-style analysis
        Optimize CTA binned and cube-style analysis
        Load events only when needed into GCTAObservation
        Implement full automatic typecasting in Python module
        Fill DETX and DETY values in GCTAResponseIrf::mc 
        Rename GCTAModelBackground to GCTAModelCubeBackground
        Rename GCTAModelInstBackground to GCTAModelIrfBackground
        Rename GIntegral::romb() to GIntegral::romberg()
        Correctly take into account logfile name change in Python
        Correctly use DETX/DETY in radians in GCTAInstDir
        Introduce class codes to avoid dynamic type casting
        Remove error computation from optimization
        Add GOptimize::errors() method for error computation
        Several bug corrections


2014-03-12  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Bug fix Version 0.8.2 released
        ================================

        Avoid division by zero error in GModelSpectralPlaw2 (#1141)